--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,9 @@ body {
 /* Header styles */
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Header h1 styles */
@@ -32,8 +32,8 @@ body {
 /* Navigation styles */
 .header nav {
     padding-top: 15px;
-    margin-right: 20px;
     float: right;
+    margin-right: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
@@ -62,7 +62,7 @@ p {
 
 /* Hero section styles */
 .hero {
-    height: 800px;
+    height: 400px; /* Adjusted height for better responsiveness */
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -83,7 +83,7 @@ p {
 
 /* Main content area styles */
 .content {
-    width: 75%;
+    width: 70%; /* Adjusted width for better responsiveness */
     display: inline-block;
     margin-left: 20px;
 }
@@ -94,8 +94,7 @@ p {
     padding: 20px;
     clear: both;
     float: right;
-    width: 20%;
-    height: 100%;
+    width: 25%; /* Adjusted width for better responsiveness */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -130,7 +129,7 @@ p {
 .online-reputation-management,
 .social-media-marketing {
     margin-bottom: 20px;
-    padding: 50px;
+    padding: 20px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
@@ -156,8 +155,8 @@ p {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Footer h2 styles */
